@@ -5,8 +5,10 @@ import com.example.benomad.entity.Place;
 import com.example.benomad.entity.Rating;
 import com.example.benomad.entity.User;
 import com.example.benomad.enums.*;
-import com.example.benomad.exception.*;
-import com.example.benomad.logger.LogWriter;
+import com.example.benomad.exception.ContentIsNotRatedException;
+import com.example.benomad.exception.ContentNotFoundException;
+import com.example.benomad.exception.InvalidRatingException;
+import com.example.benomad.logger.LogWriterServiceImpl;
 import com.example.benomad.mapper.PlaceMapper;
 import com.example.benomad.repository.PlaceRepository;
 import com.example.benomad.repository.RatingRepository;
@@ -17,11 +19,7 @@ import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
 import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -32,17 +30,24 @@ public class PlaceServiceImpl implements PlaceService {
     private final RatingRepository ratingRepository;
     private final UserRepository userRepository;
     private final PlaceMapper placeMapper;
+    private final UserServiceImpl userService;
     private final AuthServiceImpl authService;
+    private final LogWriterServiceImpl logWriter;
     private final ImageServiceImpl imageService;
 
     @Override
-    public List<PlaceDTO> getPlacesByAttributes(String name, Region region, PlaceType placeType,
-                                                   String address,Boolean match,PageRequest pageRequest) {
-        Place builtPlace = Place.builder().name(name).address(address).region(region).placeType(placeType).build();
+    public List<PlaceDTO> getMyFavorites() {
+        Long userId = authService.getCurrentUserId();
+        return placeMapper.entityListToDtoList(userService.getUserEntityById(userId).getPlaces());
+    }
+
+    @Override
+    public List<PlaceDTO> getPlacesByAttributes(String name,String address,Boolean match,PageRequest pageRequest) {
+        Place builtPlace = Place.builder().name(name).address(address).build();
         Example<Place> exampleOfPlace = Example.of(builtPlace,getExampleMatcher(match));
         Page<Place> pages = placeRepository.findAll(exampleOfPlace,pageRequest);
         List<PlaceDTO> placeDTOS = placeMapper.entityListToDtoList(pages.stream().collect(Collectors.toList()));
-        LogWriter.get(String.format("%s - Returned %d places", authService.getName(), placeDTOS.size()));
+        logWriter.get(String.format("%s - Returned %d places", authService.getCurrentEmail(), placeDTOS.size()));
         return placeDTOS;
     }
 
@@ -54,7 +59,7 @@ public class PlaceServiceImpl implements PlaceService {
                     throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
                 })
         );
-        LogWriter.get(String.format("%s - Returned place with id = %d", authService.getName(), placeId));
+        logWriter.get(String.format("%s - Returned place with id = %d", authService.getCurrentEmail(), placeId));
         return placeDTO;
     }
 
@@ -62,7 +67,7 @@ public class PlaceServiceImpl implements PlaceService {
     public PlaceDTO insertPlace(PlaceDTO placeDTO) {
         placeDTO.setId(null);
         placeDTO.setId(placeRepository.save(placeMapper.dtoToEntity(placeDTO)).getId());
-        LogWriter.insert(String.format("%s - Inserted place with id = %d", authService.getName(), placeDTO.getId()));
+        logWriter.insert(String.format("%s - Inserted place with id = %d", authService.getCurrentEmail(), placeDTO.getId()));
         return placeDTO;
     }
 
@@ -74,7 +79,7 @@ public class PlaceServiceImpl implements PlaceService {
                 }
         );
         placeRepository.delete(place);
-        LogWriter.delete(String.format("%s - Deleted place with id = %d", authService.getName(), placeId));
+        logWriter.delete(String.format("%s - Deleted place with id = %d", authService.getCurrentEmail(), placeId));
         return placeMapper.entityToDto(place);
     }
 
@@ -84,7 +89,7 @@ public class PlaceServiceImpl implements PlaceService {
             throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
         }
         placeRepository.save(placeMapper.dtoToEntity(placeDTO));
-        LogWriter.update(String.format("%s - Updated place with id = %d", authService.getName(), placeId));
+        logWriter.update(String.format("%s - Deleted place with id = %d", authService.getCurrentEmail(), placeId));
         return placeDTO;
     }
 
@@ -94,38 +99,14 @@ public class PlaceServiceImpl implements PlaceService {
         Long userId = authService.getCurrentUserId();
         if(isRemoval){
             rating = 1;
-            Rating neededRating = ratingRepository.findByPlaceAndUser(
-                    placeRepository.findById(placeId).orElseThrow(
-                            () -> {
-                                throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
-                            }),
-                    userRepository.findById(userId).orElseThrow(
-                            () -> {
-                                throw new ContentNotFoundException(ContentNotFoundEnum.USER, "id", String.valueOf(userId));
-                            })
-            ).orElseThrow(
-                    () -> {
-                        throw new ContentIsNotRatedException(ContentNotFoundEnum.PLACE);
-                    });
+            Rating neededRating = getRating(placeId, userId);
             ratingRepository.delete(neededRating);
         }
         if(rating < 1 || rating > 5){
             throw new InvalidRatingException();
         }
         try{
-            Rating neededRating = ratingRepository.findByPlaceAndUser(
-                    placeRepository.findById(placeId).orElseThrow(
-                            () -> {
-                                throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
-                            }),
-                    userRepository.findById(userId).orElseThrow(
-                            () -> {
-                                throw new ContentNotFoundException(ContentNotFoundEnum.USER, "id", String.valueOf(userId));
-                            }
-                    )).orElseThrow(
-                            () -> {
-                                throw new ContentIsNotRatedException(ContentNotFoundEnum.PLACE);
-                            });
+            Rating neededRating = getRating(placeId, userId);
             neededRating.setRating(rating);
             ratingRepository.save(neededRating);
         }catch (Exception e){
@@ -143,51 +124,45 @@ public class PlaceServiceImpl implements PlaceService {
                     .rating(rating)
                     .build());
         }
-        LogWriter.update(String.format("%s - %s place with id = %d", authService.getName(),
+        logWriter.update(String.format("%s - %s place with id = %d", authService.getCurrentEmail(),
                 isRemoval ? "Removed rated for" : "Rated", placeId));
         return placeMapper.entityToDto(placeRepository.findById(placeId).orElseThrow(() -> {
             throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
         }));
     }
 
+    private Rating getRating(Long placeId, Long userId) {
+        return ratingRepository.findByPlaceAndUser(
+                placeRepository.findById(placeId).orElseThrow(
+                        () -> {
+                            throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, "id", String.valueOf(placeId));
+                        }),
+                userRepository.findById(userId).orElseThrow(
+                        () -> {
+                            throw new ContentNotFoundException(ContentNotFoundEnum.USER, "id", String.valueOf(userId));
+                        })
+        ).orElseThrow(
+                () -> {
+                    throw new ContentIsNotRatedException(ContentNotFoundEnum.PLACE);
+                });
+    }
+
     @Override
     public List<PlaceDTO> getPlacesByTypesAndCategories(List<PlaceCategory> categories, List<PlaceType> types, Pageable pageable) {
-        List<String> sCategories = categories.stream().map(Enum::name).toList();
-        List<String> sTypes = types.stream().map(Enum::name).toList();
+        List<String> sCategories = categories.stream().map(Enum::name).collect(Collectors.toList());
+        List<String> sTypes = types.stream().map(Enum::name).collect(Collectors.toList());
         Page<Place> placePage = placeRepository.findPlacesByPlaceCategoriesAndPlaceTypes(sCategories,sTypes,pageable);
-        return placeMapper.entityListToDtoList(placePage.stream().toList());
+        return placeMapper.entityListToDtoList(placePage.stream().collect(Collectors.toList()));
     }
 
-    @Override
-    public Long insertImageByPlaceId(Long id, MultipartFile file) throws ContentNotFoundException {
-        Place place = placeRepository.findById(id)
-                .orElseThrow(() -> new ContentNotFoundException(ContentNotFoundEnum.PLACE,"id",String.valueOf(id)));
-        imageService.checkIsNotEmpty(file);
-        imageService.checkIsImage(file);
-        Map<String, String> metadata = imageService.getMetaData(file);
-        String pathToFile = String.format("%s/%s", AwsBucket.MAIN_BUCKET.getBucketName(),ImagePath.PLACE.getPathToImage());
-        String uniqueFileName = String.format("%s-%s",file.getOriginalFilename(), UUID.randomUUID());
-        try {
-            imageService.saveImageAws(pathToFile,uniqueFileName, Optional.of(metadata),file.getInputStream());
-            place.setImageUrl(uniqueFileName);
-            placeRepository.save(place);
-            return place.getId();
-        } catch (IOException e) {
-            throw new FailedWhileUploadingException();
-        }
-    }
 
-    @Override
-    public byte[] getImageByPlaceId(Long id) {
-        Place place = placeRepository.findById(id)
-                .orElseThrow(() -> new ContentNotFoundException(ContentNotFoundEnum.PLACE,"id",String.valueOf(id)));
-        String pathToFile = String.format("%s/%s", AwsBucket.MAIN_BUCKET.getBucketName(),ImagePath.PLACE.getPathToImage());
-        return place.getImageUrl().map(x -> imageService.getAwsImageByPathAndKey(pathToFile,x)).orElse(new byte[0]);
-    }
+
+
 
     @Override
     public PlaceDTO addPlaceToFavorites(Long id) throws ContentNotFoundException {
         Long userId = authService.getCurrentUserId();
+        /// FIXME: Throw authorized exception
         User user = userRepository.findById(userId)
                 .orElseThrow(
                         () -> new ContentNotFoundException(ContentNotFoundEnum.USER,"id",String.valueOf(userId))
@@ -196,26 +171,42 @@ public class PlaceServiceImpl implements PlaceService {
                 .orElseThrow(
                         () -> new ContentNotFoundException(ContentNotFoundEnum.PLACE,"id",String.valueOf(id))
                 );
-        if (user.getPlaces().contains(place)) throw new ContentIsAlreadyInFavoritesException(ContentNotFoundEnum.PLACE);
-        user.getPlaces().add(place);
+        if (user.getPlaces().contains(place))  user.getPlaces().remove(place);
+        else user.getPlaces().add(place);
         userRepository.save(user);
         return placeMapper.entityToDto(place);
+    }
 
+    @Override
+    public boolean insertImagesByPlaceId(Long placeId, MultipartFile[] files) {
+        Place place = placeRepository
+                .findById(placeId).orElseThrow(
+                        () -> new ContentNotFoundException(ContentNotFoundEnum.PLACE,"id",String.valueOf(placeId))
+                );
+        List<String> placeImageUrls = place.getImageUrls();
+        placeImageUrls.addAll(imageService.uploadImages(files, ImagePath.PLACE));
+        placeRepository.save(place);
+        return true;
+    }
+
+    @Override
+    public List<String> getImagesById(Long id) {
+        Place place = placeRepository.findById(id)
+                .orElseThrow(
+                        () -> new ContentNotFoundException(ContentNotFoundEnum.PLACE,"id",String.valueOf(id))
+                );
+        return place.getImageUrls();
     }
 
     private ExampleMatcher getExampleMatcher(Boolean match) {
         ExampleMatcher matches = ExampleMatcher.matchingAll()
                 .withMatcher("name", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
-                .withMatcher("region",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
-                .withMatcher("placeType",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("address",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
-                .withIgnorePaths("id","description","imageUrl","linkUrl");
+                .withIgnorePaths("id","description","imageUrl","linkUrl","region","placeType","placeCategory");
         ExampleMatcher notMatches = ExampleMatcher.matchingAny()
                 .withMatcher("name", ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
-                .withMatcher("region",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
-                .withMatcher("placeType",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("address",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
-                .withIgnorePaths("id","description","imageUrl","linkUrl");
+                .withIgnorePaths("id","description","imageUrl","linkUrl","region","placeType","placeCategory");
         return match ? matches : notMatches;
     }
 }
